# handlers/swagger.mjs
@@ -9,13 +9,13 @@ const options = {
    securityDefinitions: {
       google_oauth: {
         type: 'oauth2',
-        authorizationUrl: 'https://accounts.google.com/o/oauth2/auth',
+        authorizationUrl: `https://accounts.google.com/o/oauth2/auth?client_id=${process.env.GOOGLE_CLIENT_ID}`,
         tokenUrl: 'https://oauth2.googleapis.com/token',
         flow: 'authorizationCode',
         scopes: ['https://www.googleapis.com/auth/userinfo.profile', 'https://www.googleapis.com/auth/userinfo.email'],
       },
     },
-   schemes: ["https", "http"]
+   schemes: ["http", "https"]
 };
 
 
