# swagger.json
@@ -7,13 +7,13 @@
   },
   "basePath": "/",
   "schemes": [
-    "https",
-    "http"
+    "http",
+    "https"
   ],
   "securityDefinitions": {
     "google_oauth": {
       "type": "oauth2",
-      "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+      "authorizationUrl": "https://accounts.google.com/o/oauth2/auth?client_id=undefined",
       "tokenUrl": "https://oauth2.googleapis.com/token",
       "flow": "authorizationCode",
       "scopes": [
@@ -101,6 +101,19 @@
         "responses": {
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
